...
        onBackPress={() => navigation.goBack()}
      />
      <View accessible={false} style={[styles.container, { flexDirection: 'column', justifyContent: 'space-between' }]}>
        <View accessible={false}>
          <Text style={styles.title}>{t`To make sure you saved,`}</Text>
          <Text style={styles.text}>
            {t`Please select the word that corresponds to the number below:`}
          </Text>
          <Text
            testID="backup-step-number"
            accessibilityLabel={`${indexes[step]}`}
            style={[styles.title, { textAlign: 'center', fontSize: 24 }]}
          >
...
